--- a/thanks.html
+++ b/thanks.html
@@ -13,6 +13,7 @@
             color: white !important;
             margin: 0;
             width: 100%;
+            font-family: 'EB Garamond';
         }
         .button-container .next-button {
             margin-left: 5%;
@@ -65,9 +66,9 @@
 
 	<div class="main-content">
 		<i class="fa fa-check main-content__checkmark" id="checkmark"></i>
-		<p class="main-content__body" data-lead-id="main-content-body">Hồ sơ của bạn đang được duyệt! Chúng tôi sẽ liên hệ lại sớm nhất.</p>
+		<p class="main-content__body" data-lead-id="main-content-body">Thông tin của bạn đang được duyệt! Chúng tôi sẽ liên hệ lại sớm nhất.</p>
         <div class="button-container">
-            <button class="before-button"><a href="welcome-staff.html">Về trang chủ</a></button>
+            <button class="before-button"><a href="home.html">Về trang chủ</a></button>
         </div>
 	</div>
 
