--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: #ffffff;
+            background-color: salmon;
             font-family: EB Garamond, sans-serif;
         }
         form {
