--- a/welcome-staff.html
+++ b/welcome-staff.html
@@ -9,13 +9,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link href='https://fonts.googleapis.com/css?family=EB Garamond' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
   <style>
     html{
         scroll-behavior: smooth;
       }
-      *{margin: 0;padding: 0;box-sizing: border-box;font-family: 'EB Garamond', sans-serif;}
+      *{margin: 0;padding: 0;box-sizing: border-box;font-family: 'Poppins', sans-serif;}
       a{text-decoration: none;}
       a:hover{text-decoration: none;}
       li{list-style: none;}
@@ -510,28 +510,38 @@
 
   <!-- ********************* three extra header div starts ******************** -->
   <section class="serviceoffers" id="servicediv">
-  <section class="header-extradiv">
-    <div class="container">
-      <div class="row">
-        <div class="extradiv col-lg-4 col-md-4 col-12">
-          <a href="#"><i class="fa-3x fa fa-desktop"></i></a>
-          <h2>EASY TO USE</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-        </div>
-        <div class="extradiv col-lg-4 col-md-4 col-12">
-          <a href="#"><i class="fa-3x fa fa-trophy"></i></a>
-          <h2>AWESOME DESIGN</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-        </div>
-        <div class="extradiv col-lg-4 col-md-4 col-12">
-          <a href="#"><i class="fa-3x fa fa-magic"></i></a>
-          <h2>EASY TO CUSTOMIZE</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+    <section class="header-extradiv">
+      <div class="container">
+        <div class="row">
+          <div class="extradiv col-lg-3 col-md-3 col-12">
+            <a href="#"><i class="fa-3x fa fa-desktop"></i></a>
+            <h2>CHĂM SÓC TẬN TÌNH</h2>
+            <p>Hỗ trợ, đáp ứng các nhu cầu cơ bản của người bệnh nhằm duy trì ăn uống, bài tiết, tư thế, vận động, vệ sinh cá nhân, ngủ, nghỉ; chăm sóc tâm lý; hỗ trợ điều trị và tránh các nguy cơ đột quỵ có thể tái phát
+          </p>
+          </div>
+          <div class="extradiv col-lg-3 col-md-3 col-12">
+            <a href="#"><i class="fa-3x fa fa-trophy"></i></a>
+            <h2>SƠ CỨU KỊP THỜI</h2>
+            <p>Trong vòng 3 giờ đầu kể từ khi có triệu chứng chính là khung giờ vàng của đột quỵ. Nhân viên chăm sóc của chúng tôi sẽ thực hiện những biện pháp sơ cứu ban đầu trước khi đưa bệnh nhân đến cơ sở y tế. 
+          </p>
+          </div>
+          <div class="extradiv col-lg-3 col-md-3 col-12">
+            <a href="#"><i class="fa-3x fa fa-magic"></i></a>
+            <h2>ĐA DẠNG DỊCH VỤ</h2>
+            <p>Chúng tôi có các dịch vụ phù hợp với nhu cầu và tính chất của từng gia đình như toàn thời gian, bán thời gian, ngày cuối tuần.
+          </p>
+          </div>
+          <div class="extradiv col-lg-3 col-md-3 col-12">
+              <a href="#"><i class="fa-3x fa fa-magic"></i></a>
+              <h2>HỖ TRỢ HỒI PHỤC</h2>
+              <p>Chúng tôi có các dịch vụ phù hợp với nhu cầu và tính chất của từng gia đình như toàn thời gian, bán thời gian, ngày cuối tuần.
+            </p>Người bệnh sau tai biến thường được các bác sĩ khuyến khích tập luyện vật lý trị liệu giúp tốc độ phục hồi nhanh chóng hơn. Ngoài những bài tập tại trung tâm, bệnh nhân có thể áp dụng thêm những bài tập phục hồi chức năng sau tai biến: Bài tập đứng thẳng, giữ thăng bằng cho bệnh nhân tai biến, bài tập bắc cầu, tập luyện cơ 2 bên đùi 
+            </div>
         </div>
       </div>
-    </div>
+    </section>
   </section>
-</section>
+  
   <!-- ********************* three extra header div starts ******************** -->
 
   <!-- ********************* offer section starts ****************************** -->
@@ -619,22 +629,22 @@
     <div class="container d-flex justify-content-around align-items-center text-center">
       <div>
         <h1 class="count">1500</h1>
-        <p>CMS Installation</p>
+        <p>Lượt thuê dịch vụ</p>
       </div>
 
       <div>
         <h1 class="count">2500</h1>
-        <p>Awards Won</p>
+        <p>Người đăng ký</p>
       </div>
 
       <div>
         <h1 class="count">700</h1>
-        <p>Happy Clients</p>
+        <p>Người bệnh sử dụng</p>
       </div>
 
       <div>
         <h1 class="count">500</h1>
-        <p>Working On</p>
+        <p>Chăm sóc viên</p>
       </div>
     </div>
   </section>
@@ -645,72 +655,58 @@
 
   <section class="pricing" id="pricingdiv">
     <div class="container headings text-center">
-      <h1 class="text-center font-weight-bold text-white">OUR BEST PRICING</h1>
+      <h1 class="text-center font-weight-bold text-white">GIÁ CẢ HỢP LÝ</h1>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-lg-4 col-12">
+        <div class="col-lg-3 col-12">
           <div class="card text-center">
-            <div class="card-header">BASIC</div>
+            <div class="card-header">CÁC NGÀY TRONG TUẦN</div>
             <div class="card-body">
-              <li>$<span class="money">20</span>/website</li>
-              <li>Responsive Websites</li>
-              <li>Domain Name Free</li>
-              <li>Mobile Friendly</li>
-              <li>Webmail Support</li>
-              <li>Customer Support 24/7</li>
+              <li>$<span class="money">250K</span>/GIỜ</li>
             </div>
             <div class="card-footer">
-              <a href="#">Purchase</a>
+              <a href="#">Đăng ký</a>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-12 card-second">
+        <div class="col-lg-3 col-12 card-second">
           <div class="card text-center">
-            <div class="card-header">STANDARD</div>
+            <div class="card-header">CUỐI TUẦN</div>
             <div class="card-body">
-              <li>$<span class="money">40</span>/website</li>
-              <li>Responsive Websites</li>
-              <li>Domain Name Free</li>
-              <li>Mobile Friendly</li>
-              <li>Webmail Support</li>
-              <li>Customer Support 24/7</li>
+              <li>$<span class="money">350K</span>/GIỜ</li>
             </div>
             <div class="card-footer">
-              <a href="#">Purchase</a>
+              <a href="#">Đăng ký</a>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-12">
+        <div class="col-lg-3 col-12">
           <div class="card text-center">
-            <div class="card-header">UNLIMITED</div>
+            <div class="card-header">CÁC NGÀY LỄ</div>
             <div class="card-body">
-              <li>$<span class="money">60</span>/website</li>
-              <li>Responsive Websites</li>
-              <li>Domain Name Free</li>
-              <li>Mobile Friendly</li>
-              <li>Webmail Support</li>
-              <li>Customer Support 24/7</li>
+              <li>$<span class="money">400K</span>/GIỜ</li>
             </div>
             <div class="card-footer">
-              <a href="#">Purchase</a>
+              <a href="#">Đăng ký</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-12">
+          <div class="card text-center">
+            <div class="card-header">MỨC GIÁ MỚI</div>
+            <div class="card-body">
+              <li>$<span class="money">X00K</span>/GIỜ</li>
+            </div>
+            <div class="card-footer">
+              <a href="#">Đăng ký</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- ********************* our pricing end ****************************** -->
-
-  <!-- ********************* our happy clients starts ****************************** -->
-
-  <section class="happyclients">
-    <div class="container headings text-center">
-      <h1 class="text-center font-weight-bold">OUR HAPPY CLIENTS</h1>
-      <p class="text-center text-captalize pt-1">Our Satisfied Customer Says</p>
-    </div>
-    <div id="demo" class="carousel slide" data-ride="carousel">
-
+  
       <!-- Indicators -->
       <ul class="carousel-indicators">
         <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -738,71 +734,6 @@
                 <h2>Web Developer</h2>
               </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-12">
-              <div class="box">
-                <a href="#"><img src="image/clients-thumb.jpg" class="img-fluid img-thumbnail"></a>
-                <p class="m-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <h1>Anil Swami</h1>
-                <h2>Web Developer</h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="row">
-            <div class="col-lg-4 col-md-4 col-12">
-              <div class="box">
-                <a href="#"><img src="image/clients-thumb.jpg" class="img-fluid img-thumbnail"></a>
-                <p class="m-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <h1>Anil Swami</h1>
-                <h2>Web Developer</h2>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-12">
-              <div class="box">
-                <a href="#"><img src="image/clients-thumb.jpg" class="img-fluid img-thumbnail"></a>
-                <p class="m-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <h1>Anil Swami</h1>
-                <h2>Web Developer</h2>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-12">
-              <div class="box">
-                <a href="#"><img src="image/clients-thumb.jpg" class="img-fluid img-thumbnail"></a>
-                <p class="m-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <h1>Anil Swami</h1>
-                <h2>Web Developer</h2>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="row">
-            <div class="col-lg-4 col-md-4 col-12">
-              <div class="box">
-                <a href="#"><img src="image/clients-thumb.jpg" class="img-fluid img-thumbnail"></a>
-                <p class="m-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <h1>Anil Swami</h1>
-                <h2>Web Developer</h2>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-12">
-              <div class="box">
-                <a href="#"><img src="image/clients-thumb.jpg" class="img-fluid img-thumbnail"></a>
-                <p class="m-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <h1>Anil Swami</h1>
-                <h2>Web Developer</h2>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-12">
-              <div class="box">
-                <a href="#"><img src="image/clients-thumb.jpg" class="img-fluid img-thumbnail"></a>
-                <p class="m-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <h1>Anil Swami</h1>
-                <h2>Web Developer</h2>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
 
@@ -824,8 +755,8 @@
 
   <section class="contactus" id="contactdiv">
     <div class="container headings text-center">
-      <h1 class="text-center font-weight-bold">CONTACT US</h1>
-      <p class="text-center text-captalize pt-1">We're here to help and answer any question you might have. we look forward to hearing from you.</p>
+      <h1 class="text-center font-weight-bold">Liên hệ với chúng tôi</h1>
+      <p class="text-center text-captalize pt-1">Chúng tôi sẽ phản hồi bạn sớm nhất!</p>
     </div>
     <div class="container">
       <div class="row">
@@ -833,19 +764,19 @@
 
           <form action="/action_page.php">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Enter Your Name" id="username" autocomplete="off" required>
+              <input type="text" class="form-control" placeholder="Tên của bạn" id="username" autocomplete="off" required>
             </div>
             <div class="form-group">
-              <input type="email" class="form-control" placeholder="Enter Email" id="email" autocomplete="off" required>
+              <input type="email" class="form-control" placeholder="Email" id="email" autocomplete="off" required>
             </div>
             <div class="form-group">
-              <input type="number" class="form-control" placeholder="Enter Mobile Number" id="mobile" autocomplete="off" required>
+              <input type="number" class="form-control" placeholder="Điện thoại" id="mobile" autocomplete="off" required>
             </div>
             <div class="form-group">
-              <textarea class="form-control" rows="4" placeholder="Enter Your Message" id="comment"></textarea>
+              <textarea class="form-control" rows="4" placeholder="Để lại lời nhắn" id="comment"></textarea>
             </div>
             <div class="d-flex justify-content-center form-button">
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary">Gửi</button>
             </div>
           </form>
         </div>
@@ -858,34 +789,34 @@
 
   <!-- ********************* newsletter starts ****************************** -->
 
-  <section class="newsletter" id="newsletterdiv">
+  <!-- <section class="newsletter" id="newsletterdiv">
     <div class="container headings text-center">
-      <h1 class="text-center font-weight-bold">SUBSCRIBE TO OUR NEWS LETTER</h1>
+      <h1 class="text-center font-weight-bold">Đăng ký thông tin mới</h1>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 offset-lg-2 col-12 ">
           <div class="input-group mb-3">
-            <input type="text" class="form-control newsletter-input" placeholder="Your Email">
+            <input type="text" class="form-control newsletter-input" placeholder="Email">
             <div class="input-group-append">
-              <span class="input-group-text">Subscribe</span>
+              <span class="input-group-text">Đăng ký</span>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- ********************* newsletter ends ****************************** -->
 
 
   <!-- ********************* foter starts ****************************** -->
 
-  <footer class="footersection" id="footerdiv">
+  <!-- <footer class="footersection" id="footerdiv">
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-12 footer-div">
           <div>
-            <h3>ABOUT ANIWEB</h3>
+            <h3>Về Can Healthy</h3>
             <p>The world has become so fast paced that people don't want to stand by reading a page of information to be they would much rather look at a presentstion and understand the message.</p>
           </div>
         </div>
@@ -922,7 +853,7 @@
       </div>
       <div class="scrolltop float-right">
         <i class="fa fa-arrow-up" onclick="topFunction()" id="myBtn"></i>
-      </div>
+      </div> -->
     </div>
   </footer>
 
