--- a/welcome-staff.html
+++ b/welcome-staff.html
@@ -670,7 +670,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-12 card-second">
+        <div class="col-lg-3 col-12">
           <div class="card text-center">
             <div class="card-header">CUỐI TUẦN</div>
             <div class="card-body">
