check nốt lần cuối

--- a/welcome-staff.html
+++ b/welcome-staff.html
@@ -486,7 +486,7 @@
               <a class="nav-link" href="#pricingdiv">Dịch vụ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#newsletterdiv">Về chúng tôi</a>
+              <a class="nav-link" href="#happyclientsdiv">Về chúng tôi</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contactdiv">Liên hệ</a>
@@ -534,7 +534,7 @@
           <div class="extradiv col-lg-3 col-md-3 col-12">
               <a href="#"><i class="fa-3x fa fa-magic"></i></a>
               <h2>HỖ TRỢ HỒI PHỤC</h2>
-              <p>Chúng tôi có các dịch vụ phù hợp với nhu cầu và tính chất của từng gia đình như toàn thời gian, bán thời gian, ngày cuối tuần.
+              <!-- <p>Chúng tôi có các dịch vụ phù hợp với nhu cầu và tính chất của từng gia đình như toàn thời gian, bán thời gian, ngày cuối tuần. -->
             </p>Người bệnh sau tai biến thường được các bác sĩ khuyến khích tập luyện vật lý trị liệu giúp tốc độ phục hồi nhanh chóng hơn. Ngoài những bài tập tại trung tâm, bệnh nhân có thể áp dụng thêm những bài tập phục hồi chức năng sau tai biến: Bài tập đứng thẳng, giữ thăng bằng cho bệnh nhân tai biến, bài tập bắc cầu, tập luyện cơ 2 bên đùi 
             </div>
         </div>
@@ -708,7 +708,7 @@
   </section>
   
       <!-- Indicators -->
-      <ul class="carousel-indicators">
+      <ul class="carousel-indicators" id="happyclientsdiv">
         <li data-target="#demo" data-slide-to="0" class="active"></li>
         <li data-target="#demo" data-slide-to="1"></li>
         <li data-target="#demo" data-slide-to="2"></li>
