--- a/welcome-staff.html
+++ b/welcome-staff.html
@@ -661,7 +661,7 @@
       <div class="row">
         <div class="col-lg-3 col-12">
           <div class="card text-center">
-            <div class="card-header">CÁC NGÀY TRONG TUẦN</div>
+            <div class="card-header">TRONG TUẦN</div>
             <div class="card-body">
               <li>$<span class="money">250K</span>/GIỜ</li>
             </div>
@@ -717,6 +717,9 @@
       <!-- The slideshow -->
       <div class="carousel-inner container">
         <div class="carousel-item active">
+          <div class="container headings text-center">
+            <h1 class="text-center font-weight-bold text-white">ĐỘI NGŨ PHÁT TRIỂN</h1>
+          </div>
           <div class="row">
             <div class="col-lg-4 col-md-4 col-12">
               <div class="box">
