--- a/info3.html
+++ b/info3.html
@@ -279,7 +279,7 @@ form button a {
                     </div>
                 </div><label for="subscribe">Tôi xác nhận thông tin trên là chính xác.</label>
             </li>
-            <button type="submit"><a href="thanks.html">Hoàn thành</a></button>
+            <button type="submit"><a href="thanks-to-train.html">Hoàn thành</a></button>
         </form>
     
     </div>
