--- a/welcome-staff.html
+++ b/welcome-staff.html
@@ -500,7 +500,7 @@
         <h1 class="font-weight-bold">Giải pháp Can Healthy</h1>
         <p>Dịch vụ kết nối Người tai biến đột quỵ và người chăm sóc có chuyên môn</p>
         <div class="header-buttons">
-          <a href="form.html">Đăng ký ngay</a>
+          <a href="training.html">Đăng ký ngay</a>
         </div>
       </div>
     </section>
