--- a/thanks-to-train.html
+++ b/thanks-to-train.html
@@ -68,7 +68,7 @@
 		<i class="fa fa-check main-content__checkmark" id="checkmark"></i>
 		<p class="main-content__body" data-lead-id="main-content-body">Thông tin của bạn đang được duyệt! Chúng tôi sẽ liên hệ lại sớm nhất.</p>
         <div class="button-container">
-            <button class="before-button"><a href="training.html">Chương trình đào tạo</a></button>
+            <button class="before-button"><a href="home.html">Quay lại trang chủ</a></button>
         </div>
 	</div>
 
