--- a/welcome-user.html
+++ b/welcome-user.html
@@ -712,29 +712,29 @@
 
   <!-- ********************* our happy clients starts ****************************** -->
 
-  <section class="happyclients" id="happyclientsdiv">
+  <!-- <section class="happyclients" id="happyclientsdiv">
     <div class="container headings text-center">
       <h1 class="text-center font-weight-bold">ĐỘI NGŨ PHÁT TRIỂN</h1>
       <p class="text-center text-captalize pt-1">CÁC NHÀ SÁNG LẬP CAN HEALTHY</p>
     </div>
     <div id="demo" class="carousel slide" data-ride="carousel">
 
-      <!-- Indicators -->
+      Indicators
       <ul class="carousel-indicators">
         <li data-target="#demo" data-slide-to="0" class="active"></li>
         <li data-target="#demo" data-slide-to="1"></li>
         <li data-target="#demo" data-slide-to="2"></li>
       </ul>
 
-      <!-- The slideshow -->
-      <div class="carousel-inner container">
+       The slideshow -->
+      <!-- <div class="carousel-inner container">
         <div class="carousel-item active">
           <div class="row">
             <div class="col-lg-4 col-md-4 col-12">
               <div class="box">
-                <a href="#"><img src="image/clients-thumb.jpg" class="img-fluid img-thumbnail"></a>
+                <a href="#"><img src="image/clients-thumb.jpg" class="img-fluid img-thumbnail"></a> -->
                 <!-- <p class="m-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
-                <h1>Đỗ Thị Linh Chi</h1>
+                <!-- <h1>Đỗ Thị Linh Chi</h1>
                 <h2>Web Developer</h2>
               </div>
             </div>
@@ -745,7 +745,7 @@
                 <h1>Anil Swami</h1>
                 <h2>Web Developer</h2>
               </div>
-            </div>
+            </div> --> 
             <!-- <div class="col-lg-4 col-md-4 col-12">
               <div class="box">
                 <a href="#"><img src="image/clients-thumb.jpg" class="img-fluid img-thumbnail"></a>
